fixed big image on smaller screens

--- a/style.css
+++ b/style.css
@@ -489,4 +489,7 @@ footer {
         width: 120px;
     }
 
+    img {
+        max-height: 30vh;
+    }
 }
